ajustado o mecanismo de autenticação e autorização
