# withauth/docs/swagger.yaml
@@ -209,6 +209,8 @@ paths:
             items:
               $ref: '#/definitions/model.User'
             type: array
+      security:
+      - ApiKeyAuth: []
       summary: get users list
       tags:
       - users
@@ -234,7 +236,15 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/httputil.HTTPError'
+      security:
+      - ApiKeyAuth: []
       summary: post an user
       tags:
       - users
+securityDefinitions:
+  ApiKeyAuth:
+    description: Description for what is this security definition being used
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
